Dummy test item added with a texture to the dumb items tab

--- a/src/main/resources/assets/planetcollab/lang/en_us.json
+++ b/src/main/resources/assets/planetcollab/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.planetcollab.mars" : "Mars",
+  "item.planetcollab.ghost_item": "Ghosty Thing",
   "itemGroup.maintab" : "Planet Collab",
   "itemGroup.dumbtab" : "Dumb Stuff"
 }
