Added a dumby block and switched around textures a bit

--- a/src/main/resources/assets/planetcollab/lang/en_us.json
+++ b/src/main/resources/assets/planetcollab/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.planetcollab.mars" : "Mars",
   "item.planetcollab.ghost_item": "Ghosty Thing",
+  "block.planetcollab.ghost_block": "Ghosty Block",
   "itemGroup.maintab" : "Planet Collab",
   "itemGroup.dumbtab" : "Dumb Stuff"
 }
