Added the complex snail block WITH A BUG: snail block fails to render when placed

--- a/src/main/resources/assets/planetcollab/lang/en_us.json
+++ b/src/main/resources/assets/planetcollab/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.planetcollab.mars" : "Mars",
   "item.planetcollab.ghost_item": "Ghosty Thing",
   "block.planetcollab.ghost_block": "Ghosty Block",
+  "block.planetcollab.snail" : "Snail",
   "itemGroup.maintab" : "Planet Collab",
   "itemGroup.dumbtab" : "Dumb Stuff"
 }
