--- a/src/main/resources/assets/planetcollab/lang/en_us.json
+++ b/src/main/resources/assets/planetcollab/lang/en_us.json
@@ -5,5 +5,12 @@
   "block.planetcollab.snail" : "Snail",
   "block.planetcollab.nerd_block": "Nerd Block",
   "itemGroup.maintab" : "Planet Collab",
-  "itemGroup.dumbtab" : "Dumb Stuff"
+  "itemGroup.dumbtab" : "Dumb Stuff",
+
+  "effect.planetcollab.extreme_insomnia": "Extreme Insomnia",
+
+  "item.minecraft.potion.effect.extreme_insomnia_potion": "Extreme Insomnia Potion",
+  "item.minecraft.splash_potion.effect.extreme_insomnia_potion": "Splash Potion of Extreme Insomnia",
+  "item.minecraft.lingering_potion.effect.extreme_insomnia_potion": "Lingering Potion of Extreme Insomnia",
+  "item.minecraft.tipped_arrow.effect.extreme_insomnia_potion": "Arrow of Extreme Insomnia"
 }
