Added new food item, Monster Mash, that is used to brew Spiteful Rush

--- a/src/main/resources/assets/planetcollab/lang/en_us.json
+++ b/src/main/resources/assets/planetcollab/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.planetcollab.ghost_item": "Ghosty Thing",
   "block.planetcollab.ghost_block": "Ghosty Block",
   "item.planetcollab.edible_insomnia": "Insomnicrack",
+  "item.planetcollab.monster_mash": "Monster Mash",
 
   "block.planetcollab.snail" : "Snail",
   "block.planetcollab.nerd_block": "Nerd Block",
