Balanced some numbers with food items and spiteful rush (now renamed to Death Rush)

--- a/src/main/resources/assets/planetcollab/lang/en_us.json
+++ b/src/main/resources/assets/planetcollab/lang/en_us.json
@@ -17,11 +17,11 @@
   "item.minecraft.lingering_potion.effect.extreme_insomnia_potion": "Lingering Potion of Extreme Insomnia",
   "item.minecraft.tipped_arrow.effect.extreme_insomnia_potion": "Arrow of Extreme Insomnia",
 
-  "effect.planetcollab.spiteful_rush" : "Spiteful Rush",
-  "item.minecraft.potion.effect.spiteful_rush_potion": "Potion of Spiteful Rush",
-  "item.minecraft.splash_potion.effect.spiteful_rush_potion": "Splash Potion of Spiteful Rush",
-  "item.minecraft.lingering_potion.effect.spiteful_rush_potion": "Lingering Potion of Spiteful Rush",
-  "item.minecraft.tipped_arrow.effect.spiteful_rush_potion": "Arrow of Spiteful Rush",
+  "effect.planetcollab.spiteful_rush" : "Death Rush",
+  "item.minecraft.potion.effect.spiteful_rush_potion": "Potion of Death Rush",
+  "item.minecraft.splash_potion.effect.spiteful_rush_potion": "Splash Potion of Death Rush",
+  "item.minecraft.lingering_potion.effect.spiteful_rush_potion": "Lingering Potion of Death Rush",
+  "item.minecraft.tipped_arrow.effect.spiteful_rush_potion": "Arrow of Death Rush",
 
   "enchantment.planetcollab.projectile_attack": "DragonBall"
 }
