Adjusted the projectile enchantment to use wither skulls instead of custom entities

--- a/src/main/resources/assets/planetcollab/lang/en_us.json
+++ b/src/main/resources/assets/planetcollab/lang/en_us.json
@@ -23,5 +23,5 @@
   "item.minecraft.lingering_potion.effect.spiteful_rush_potion": "Lingering Potion of Death Rush",
   "item.minecraft.tipped_arrow.effect.spiteful_rush_potion": "Arrow of Death Rush",
 
-  "enchantment.planetcollab.projectile_attack": "DragonBall"
+  "enchantment.planetcollab.projectile_attack": "Wither Rain"
 }
